--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-
+         hub release create -a ${{ github.workspace }}/file_2.txt
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
