--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         hub release create -m "v0.1"
+         hub release create -m "v0.1" "$(date +%Y%m%d%H%M%S)"
+
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
