--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -6,11 +6,11 @@ on:
 jobs:
   cli:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      
+
     steps:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         hub release create -m "v0.1" "release"
+         hub release create -a ${{ github.workspace }}/file_2.txt -m "v0.1" "release"
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
