--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         hub release create -a "./file_2.txt" -m "v0.1" "rel2"
+         hub release edit rel2 -m '' -a ./file_2.txt
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
