--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         tree ./
-         hub release create -at "file_2.txt" -m "v0.1"
+         tree ${{ github.action_path }}
+         hub release create -at file_2.txt -m "v0.1"
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
