--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -12,6 +12,6 @@ jobs:
       - name: cli
         run: |
          tree ${{ github.action_path }}
-         hub release create -at file_2.txt -m "v0.1"
+         hub release create -at ${{ github.action_path }}/file_2.txt -m "v0.1"
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
