--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -11,7 +11,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         tree ${{ github.action_path }}
-         hub release create -at ${{ github.action_path }}/file_2.txt -m "v0.1"
+         hub release create -a ${{ github.action_path }}/file_2.txt -m "v0.1" "relase 2"
         env:
           GITHUB_TOKEN: ${{secrets.ACCESS_TOKEN}}
