--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         hub release create -a file_2.txt -m "v0.1" "relase 2"
+         hub release create -a file_2.txt -m "v0.1" "2"
         env:
           GITHUB_TOKEN: ${{secrets.ACCESS_TOKEN}}
