--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         hub release create -a file_2.txt
+         hub release create -dpoc -a file_1.txt -m 'release 1' v1
         env:
           GITHUB_TOKEN: ${{secrets.ACCESS_TOKEN}}
