--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         hub release edit -a file_2.txt -m 'release 1' v1
+         hub release create -a file_1.txt -m 'release 1' v1
 
         env:
-          GITHUB_TOKEN: ${{secrets.ACCESS_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
