--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -11,7 +11,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         gh release create v0.1 ${{ github.workspace }}/file_2.txt --target master
+         git tag -a -m 'test' v2.5.0
+         git push origin v2.5.0
+         gh release create v2.5.0 [file_1.txt,file_2.txt] --target master
 
         env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
