--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         gh release create v2.5.0 [file_1.txt,file_2.txt] --target master
+         gh release create v2.5.0 [./file_1.txt, ./file_2.txt] --target master
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
