--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         gh release create v0.3 ./file_1.txt ./file_2.txt --target master --notes-start-tag v0.2 --generate-notes
+         gh release create ./file_1.txt ./file_2.txt --target master --generate-notes
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
