--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -3,7 +3,6 @@ on:
  workflow_dispatch:
 
 
-jobs:
   cli:
     runs-on: ubuntu-latest
 
@@ -11,7 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         gh release create ./file_1.txt ./file_2.txt --target master --generate-notes
-
+         gh release create v0.2 ./*.txt --target master --generate-notes
+       # gh release create v0.3 ./file_1.txt ./file_2.txt --target master --notes-start-tag v0.2 --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
