--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -13,7 +13,6 @@ jobs:
         run: |
          gh release view --json tagName
          last_relase=$(gh release view --json tagName --jq .tagName)
-         echo $last_relase
          echo "last_relase=$(echo $last_relase)" >> $GITHUB_ENV
          echo ${{ env.last_relase }}
         env:
@@ -25,7 +24,7 @@ jobs:
           ${{ github.run_id }} \
           ./*.txt \
           --target master \
-          --generate-notes \
+          --notes-start-tag ${{ env.last_relase }} \
           --title v0.2
        # gh release create v0.3 ./file_1.txt ./file_2.txt --target master --notes-start-tag v0.2 --generate-notes
         env:
