--- a/.github/workflows/hub-cli.yml
+++ b/.github/workflows/hub-cli.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         hub release create -a file_1.txt -m 'release 1' ${{ github.sha }}
+         hub release create -a file_1.txt -m 'release 1' ${{ github.run_id }}
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
