--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -30,3 +30,11 @@ jobs:
        # gh release create v0.3 ./file_1.txt ./file_2.txt --target master --notes-start-tag v0.2 --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+      - name: cli gh release view
+        run: |
+         gh release delete * --cleanup-tag --yes
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
