--- a/.github/workflows/clean_relases.yml
+++ b/.github/workflows/clean_relases.yml
@@ -11,7 +11,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         gh release list | sed 's/|/ /' | gawk '{print $1, $8}' 
+         gh release list | sed 's/|/ /' | gawk '{print $1, $8}' \
+         | while read -r line; do gh release delete -y "$line"; done
          git fetch
          git tag -l | xargs -n 1 git push --delete origin
         env:
