--- a/.github/workflows/clean_relases.yml
+++ b/.github/workflows/clean_relases.yml
@@ -11,8 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         gh release list | sed 's/|/ /' | gawk '{print $1, $8}' \
-         | while read -r line; do gh release delete -y "$line"; done
-
+         chmod +x ${{ github.action_path }}/clean_relases.sh
+         ${{ github.action_path }}/clean_relases.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
