--- a/.github/workflows/clean_relases.yml
+++ b/.github/workflows/clean_relases.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         chmod +x ${{ github.action_path }}/clean_relases.sh
-         ${{ github.action_path }}/clean_relases.sh
+         chmod +x ./clean_relases.sh
+         ./clean_relases.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
