--- a/.github/workflows/clean_relases.yml
+++ b/.github/workflows/clean_relases.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         chmod +x ./clean_relases.sh
-         ./clean_relases.sh
+         # chmod +x ./clean_relases.sh
+         # ./clean_relases.sh
          git fetch
          git tag -l | xargs -n 1 git push --delete origin
         env:
