--- a/.github/workflows/clean_relases.yml
+++ b/.github/workflows/clean_relases.yml
@@ -11,9 +11,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: cli
         run: |
-         # chmod +x ./clean_relases.sh
-         # ./clean_relases.sh
-         git fetch
-         git tag -l | xargs -n 1 git push --delete origin
+         chmod +x ./clean_relases.sh
+         ./clean_relases.sh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
