--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -5,9 +5,19 @@ on:
 jobs:
   cli:
     runs-on: ubuntu-latest
-
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v3
+
+      - name: cli gh release view
+        run: |
+         gh release view
+         last_relase=$(gh release view --json tagName --jq .tagName)
+         echo "last_relase=$(echo $last_relase)" >> $GITHUB_ENV
+         echo ${{ env.last_relase }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: cli gh release create
         run: |
@@ -21,17 +31,6 @@ jobs:
        # gh release create v0.3 ./file_1.txt ./file_2.txt --target master --notes-start-tag v0.2 --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-      - name: cli gh release view
-        run: |
-         gh release view
-         last_relase=$(gh release view --json tagName --jq .tagName)
-         echo "last_relase=$(echo $last_relase)" >> $GITHUB_ENV
-         echo ${{ env.last_relase }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 
       - name: cli gh release delete
         run: |
