--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -9,7 +9,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-
+      - name: cli gh release view
+        run: |
+         gh release view
+         last_relase=$(gh release view --json tagName --jq .tagName)
+         echo "last_relase=$(echo $last_relase)" >> $GITHUB_ENV
+         echo ${{ env.last_relase }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
       - name: cli gh release create
