--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -9,13 +9,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: cli gh release view
+      - name: cli gh release list
         run: |
-         gh release view
+         gh release list
+         list_relase=$(gh release list)
+         echo "list_relase=$(echo $list_relase)" >> $GITHUB_ENV
+         echo ${{ env.list_relase }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: cli gh release view
+        if: ${{env.list_relase != '0'}}
         run: |
          gh release view
          last_relase=$(gh release view --json tagName --jq .tagName)
