--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   cli:
     runs-on: ubuntu-latest
-    continue-on-error: true
+   
     steps:
       - uses: actions/checkout@v3
 
@@ -16,7 +16,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: cli gh release view
-        if: success()
+        if: ${{ success() }}
         run: |
          gh release view
          last_relase=$(gh release view --json tagName --jq .tagName)
