--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -27,6 +27,7 @@ jobs:
 
 
       - name: cli gh release create
+        if: ${{ failure() }}
         run: |
          gh release create \
           ${{ github.run_id }} \
@@ -40,6 +41,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: cli gh release delete
+        if: ${{ failure() }}
         run: |
          gh release delete ${{ env.last_relase }} --cleanup-tag --yes
         env:
