--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -41,7 +41,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: cli gh release delete
-        if: ${{ failure() }}
+        if: ${{ success() }}
         run: |
          gh release delete ${{ env.last_relase }} --cleanup-tag --yes
         env:
