--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -27,7 +27,7 @@ jobs:
 
 
       - name: cli gh release create
-        if: ${{ failure() }}
+        if: ${{ success() }}
         run: |
          gh release create \
           ${{ github.run_id }} \
