--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -16,7 +16,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: cli gh release view
-        if: ${{ success() }}
+        if: ${{ failure() }}
         run: |
          gh release view
          last_relase=$(gh release view --json tagName --jq .tagName)
