--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -47,7 +47,7 @@ jobs:
       - name: git log
         continue-on-error: true
         run: |
-         git log ${{ env.last_relase }}...${{ env.new_relase }}
+         git log '${{ env.last_relase }}'...'${{ env.new_relase }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
