--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -47,7 +47,8 @@ jobs:
       - name: git log
         continue-on-error: true
         run: |
-         git log tags/${{ env.last_relase }}...tags/${{ env.new_relase }}
+         git fetch
+         git log origin/master ${{ env.last_relase }..${{ env.new_relase }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
