--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -48,7 +48,7 @@ jobs:
         continue-on-error: true
         run: |
          git fetch
-         git log origin/master ${{ env.last_relase }..${{ env.new_relase }}
+         git log origin/master ${{ env.last_relase }}..${{ env.new_relase }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
