--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -47,8 +47,7 @@ jobs:
       - name: git log
         continue-on-error: true
         run: |
-         git fetch
-         git log origin/master ${{ env.last_relase }}..${{ env.new_relase }}
+         git log env.last_relase..env.new_relase
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
