--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -48,6 +48,8 @@ jobs:
         continue-on-error: true
         run: |
          git fetch --tags
+         git log ${{ env.last_relase }}..${{ env.new_relase }}
+         git diff ${{ env.last_relase }}..${{ env.new_relase }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
