--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -48,7 +48,7 @@ jobs:
         continue-on-error: true
         run: |
          git fetch --tags
-         git log --pretty=reference --graph ${{ env.last_relase }}..${{ env.new_relase }}
+         git log --pretty=oneline --graph ${{ env.last_relase }}..${{ env.new_relase }}
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
