--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -48,7 +48,7 @@ jobs:
         continue-on-error: true
         run: |
          git fetch --tags
-         git log --date=short --pretty='%h; author: %cn; date: %ci; subject:%s' ${{ env.last_relase }}..${{ env.new_relase }}
+         git log --date=short --pretty='%f; author: %cn; date: %ci; subject:%s' ${{ env.last_relase }}..${{ env.new_relase }}
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
