--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -51,7 +51,7 @@ jobs:
          log_relase=$(git log --pretty='author: %cn; date: %ah; subject:%s' ${{ env.last_relase }}..${{ env.new_relase }})
          echo "log_relase=$(echo $log_relase)" >> $GITHUB_ENV
          echo ${{ env.log_relase }
-         gh release edit ${{ env.new_relase }} --notes ${{ env.log_relase }
+         gh release edit ${{ env.new_relase }} --notes ${{ env.log_relase }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
