--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -53,7 +53,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: cli gh release edi
+      - name: cli gh release edit
         continue-on-error: true
         run: |
          gh release edit ${{ env.new_relase }} --notes ${{ env.log_relase }}
