--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -56,7 +56,7 @@ jobs:
       - name: cli gh release edit
         continue-on-error: true
         run: |
-         gh release edit ${{ env.new_relase }} --notes "bugfix release"
+         gh release edit ${{ env.new_relase }} --notes "${{ env.log_relase }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
