--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -47,7 +47,7 @@ jobs:
         continue-on-error: true
         run: |
          git fetch --tags
-         log_relase=$(git log --date=short --pretty='author: %cn; date: %ah; subject:%s' ${{ env.last_relase }}..${{ env.new_relase }})
+         log_relase=$(git log --date=short --pretty='author: %cn; date: %s, %ad; subject:%s' ${{ env.last_relase }}..${{ env.new_relase }})
          echo "log_relase=$(echo $log_relase)" >> $GITHUB_ENV
          echo ${{ env.log_relase }}
         env:
