--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -1,4 +1,4 @@
-name: release
+name: release-matrix-test
 run-name: ${{ github.workflow }} ✅ ${{ github.actor }} ✅ ${{ github.event_name}}
 on:
   workflow_dispatch:
