--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -19,7 +19,7 @@ jobs:
 
       - uses: milankomaj/releases-x@v0.1
         with:
-          token: '${{ secrets.GITHUB_TOKEN }}'
+          token: ${{ secrets.GITHUB_TOKEN }}
           title: 'relase'
           tag: 'v0.2'
           files: './*.txt'
