--- a/action.yml
+++ b/action.yml
@@ -74,11 +74,11 @@ runs:
       if: ${{ always() }}
       run: |
         gh release create \
-        ${{ env.inputs.tag }} \
+        ${{ env.tag }} \
         ${{ env.files }} \
         --target master \
         --notes-start-tag ${{ env.last_relase }} \
-        --title $${{ env.inputs.title }}
+        --title $${{ env.title }}
         new_relase=$(gh release view --json tagName --jq .tagName)
         echo "new_relase=$(echo $new_relase)" >> $GITHUB_ENV
         echo ${{ env.new_relase }}
