--- a/action.yml
+++ b/action.yml
@@ -77,7 +77,7 @@ runs:
         ${{ env.tag }} \
         ${{ env.files }} \
         --target master \
-        --notes-start-tag ${{ env.last_relase }} \
+        --generate-notes \
         --title ${{ env.title }}
         new_relase=$(gh release view --json tagName --jq .tagName)
         echo "new_relase=$(echo $new_relase)" >> $GITHUB_ENV
