--- a/action.yml
+++ b/action.yml
@@ -26,8 +26,6 @@ inputs:
 
 
 runs:
-  strategy:
-    fail-fast: false
   using: "composite"
   steps:
 
@@ -57,6 +55,7 @@ runs:
 
     - name: check
       id: check
+      continue-on-error: true
       run: gh release view
       shell: bash
 
