--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v3
 
 
-      - name: cli gh release view
+      - name: gh api repos/{owner}/{repo}/releases
         continue-on-error: true
         run: |
-         gh release view
+         gh api repos/${{ github.repository }}/releases
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
