--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -23,5 +23,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           title: 'relase'
           tag: 'v0.2'
-          files: 'file_1.txt file_2.txt'
+          files: ''
           rewrite: 'true'
