--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ inputs:
   tag:  # id of input
     description: 'Use tag'
     required: false
-    default: ${{ github.run_id }}
+    default: '${{ github.run_id }}'
   files:  # id of input
     description: 'Use files'
     required: false
