--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: milankomaj/releases-x@v0.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          title: ''
+          title: 'relase'
           tag: 'v0.2'
           files: ''
           rewrite: 'true'
