--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       max-parallel: 3
       matrix:
-       os: [ubuntu-latest, macos-latest, windows-latest]
+       os: [ubuntu-latest]
 
 
     runs-on: ${{ matrix.os }}
