--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -23,5 +23,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           title: 'relase'
           tag: 'v0.2'
-          files: '${{ github.workspace }}/aa/*.* ${{ github.workspace }}/bb/*.*'
-          rewrite: 'true'
+          rewrite: 'true'          
+          files: | 
+           ${{ github.workspace }}/aa/*.* 
+           ${{ github.workspace }}/bb/*.*
+
