--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -25,7 +25,6 @@ jobs:
           tag: 'v0.2'
           rewrite: 'true'          
           files: | 
-           '
-           ${{ github.workspace }}/aa/*.* 
+           ${{ github.workspace }}/aa/*.* \
            ${{ github.workspace }}/bb/*.*
-           '
+         
