--- a/action.yml
+++ b/action.yml
@@ -72,12 +72,6 @@ runs:
         echo ${{ env.last_relase }}
       shell: bash
 
-    - name: rewrite
-      id: rewrite
-      if: inputs.rewrite == 'true' && env.api  != '[]'
-      run: gh release delete ${{ env.last_relase }} --cleanup-tag --yes
-      shell: bash
-
     - name: create
       id: create
       if: ${{ always() }}
@@ -91,4 +85,10 @@ runs:
         new_relase=$(gh release view --json tagName --jq .tagName)
         echo "new_relase=$(echo $new_relase)" >> $GITHUB_ENV
         echo ${{ env.new_relase }}
+      shell: bash
+
+    - name: rewrite
+      id: rewrite
+      if: inputs.rewrite == 'true' && env.api != '[]' && steps.create.outcome == 'success'
+      run: gh release delete ${{ env.last_relase }} --cleanup-tag --yes
       shell: bash
