--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -21,9 +21,9 @@ jobs:
       - uses: milankomaj/releases-x@v0.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          title: 'relase'
-          tag: 'v0.2'
-          rewrite: 'true'          
+          title: relase
+          tag: v0.2
+          rewrite: true          
           files: | 
            ${{ github.workspace }}/.github/workflows/*.yml \
            ${{ github.workspace }}/*.yml
