--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -42,7 +42,7 @@ jobs:
           tag: v0.2
           rewrite: true          
           files: | 
-           ${{ github.workspace }}/./artifacts/workflows/gh-cli.yml \
+           ${{ github.workspace }}/./artifacts/**/* \
            ${{ github.workspace }}/./artifacts/composite/action.yml
     
 
