--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -20,12 +20,12 @@ jobs:
       
       - uses: actions/upload-artifact@v3
         with:
-         name: 'workflows&yml'
+         name: workflows
          path: ${{ github.workspace }}/.github/workflows/*.yml  
          
       - uses: actions/upload-artifact@v3
         with:
-         name: 'composite&yml'
+         name: composite
          path: ${{ github.workspace }}/*.yml   
 
       - uses: actions/download-artifact@v3
@@ -42,7 +42,7 @@ jobs:
           tag: v0.2
           rewrite: true          
           files: | 
-           ${{ github.workspace }}/./artifacts/'composite&yml'/*.*
+           ${{ github.workspace }}/./artifacts/*
     
 
          
