--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -21,10 +21,10 @@ jobs:
       - uses: milankomaj/releases-x@v0.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          target: ''
           title: 'relase'
           tag: 'v0.2'
-          rewrite: 'true'          
-          files: | 
+          rewrite: 'true'
+          files: |
            ${{ github.workspace }}/.github/workflows/*.yml \
            ${{ github.workspace }}/*.yml
-         
