--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -38,10 +38,10 @@ jobs:
       - uses: milankomaj/releases-x@v0.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          target: ''
-          title: 'relase'
-          tag: 'v0.2'
-          rewrite: 'true'
+          target:
+          title: relase
+          tag: v0.2
+          rewrite: true
           files: |
            ${{ github.workspace }}/.github/workflows/*.yml \
            ${{ github.workspace }}/*.yml
