--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -2,7 +2,7 @@ name: release-matrix-test
 run-name: ${{ github.workflow }} ✅ ${{ github.actor }} ✅ ${{ github.event_name}}
 on:
   workflow_dispatch:
-   branches: '**'
+   branches: 'v0.3'
 
 jobs:
   bash:
@@ -38,7 +38,7 @@ jobs:
       - uses: milankomaj/releases-x@v0.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          target: master
+          target: v0.3
           title: relase
           tag: v0.2
           rewrite: true
