--- a/action.yml
+++ b/action.yml
@@ -108,5 +108,5 @@ runs:
       run: |
         echo $GITHUB_ENV
         echo '#### environment' >> $GITHUB_STEP_SUMMARY
-        echo $GITHUB_ENV >> $GITHUB_STEP_SUMMARY
+        echo "$(echo $GITHUB_ENV)" >> $GITHUB_STEP_SUMMARY
       shell: bash
